--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -102,7 +102,7 @@
     <ClCompile Include="src\Graphics\Texture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Core\Profiling.cpp">
+    <ClCompile Include="src\Core\Profiler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Game\Player.cpp">
@@ -185,7 +185,7 @@
     <ClInclude Include="src\Graphics\Texture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Core\Profiling.h">
+    <ClInclude Include="src\Core\Profiler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Game\Player.h">
