--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -215,6 +215,9 @@
     <ClInclude Include="vendor\PerlinNoise\PerlinNoise.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="vendor\FastNoiseLite\FastNoiseLite.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\shaders\default.vert" />
