--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -123,6 +123,9 @@
     <ClCompile Include="src\Game\WorldGeneration.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Physics\Frustum.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="vendor\imgui\imconfig.h">
@@ -216,6 +219,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="vendor\FastNoiseLite\FastNoiseLite.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Physics\Frustum.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
